--- a/Week01/Week1_2-HTML/index.html
+++ b/Week01/Week1_2-HTML/index.html
@@ -3,11 +3,58 @@
     <head>
          <meta charset="UTF-8"/>
          <meta name ="viewport" content="width=device-width, initial-scale=1"/>
-         <title>HTML Elements 101/title>
+         <title>HTML Elements 101</title>
     </head> 
     <body>
-        <h1>Hello World!</h1>
+        <h1>Heading 1 is the most important text on the page. This is usually a marketing tagline/company name/page title. 
+        Only one h1 per page</h1>
+        <h2>Heading 2 -- can have as many h2-h6 as you want</h2>
+        <h3>Heading 3 -- this one is a little but smaller</h3>
+        <h4>Heading 4 -- aaaaaaaaaaa</h4>
+        <h5>Heading 5 -- having only h1-h3 is usually fine </h5>
+        <h6>Heading 6 -- lil baby heading </h6>
         <p>This is your HTML boilerplate. Save it w/out the notes as a quick starter file for HTML docs!</p>
+
+
+        <!-- <br /> creates a break, but not a paragraph space. new line -->
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin justo quam, aliquam in lorem nec, mattis 
+            fermentum nibh. Suspendisse potenti. Aenean bibendum quam sed lorem sodales iaculis vitae at odio. Mauris 
+            malesuada consectetur enim, non commodo mi varius ac. Morbi faucibus neque quis nisi lobortis ultrices. 
+            Integer vehicula imperdiet orci vel congue. <br /> Class aptent taciti sociosqu ad litora torquent per conubia nostra, 
+            per inceptos himenaeos. Curabitur scelerisque consequat arcu, at euismod nulla lacinia a. Quisque neque ex, 
+            convallis nec elit nec, facilisis pellentesque quam. Nullam mi tortor, lacinia non tincidunt eu, consectetur vitae diam.
+
+
+        <em>em. this is italics. </em>
+
+        <strong>strong. this is bold.</strong>
+
+        <!-- hr for horizontal rule, creates a line -->
+        <hr />
+    
+        <h2>Recipe name</h2>
+        <p> This is a description of the recipe.</p>
+        <img 
+        src="https://placecats.com/300/200" 
+        alt="This text should describe the image content for a screen reader. This also shows up if you try to load an image w a wrong link"
+        />
+
+        <img 
+        src="./image/tofuPhoto.jpg" 
+        alt="Bowl filled with rice, tofu, ground pork, and garnished with scallions."
+        width="500px"
+        />
+
+
+        <h3>Ingredients</h3>
+        <!-- ul = unordered list -->
+        <ul>
+            <li>unordered item 1</li>
+            <li>unordered item 2</li>
+            <li>unordered item 3</li>
+        </ul>
+        
+    </p>
     </body>
 
 
