--- a/Week01/Week1_2-HTML/index.html
+++ b/Week01/Week1_2-HTML/index.html
@@ -21,7 +21,7 @@
             fermentum nibh. Suspendisse potenti. Aenean bibendum quam sed lorem sodales iaculis vitae at odio. Mauris 
             malesuada consectetur enim, non commodo mi varius ac. Morbi faucibus neque quis nisi lobortis ultrices. 
             Integer vehicula imperdiet orci vel congue. <br /> Class aptent taciti sociosqu ad litora torquent per conubia nostra, 
-            per inceptos himenaeos. Curabitur scelerisque consequat arcu, at euismod nulla lacinia a. Quisque neque ex, 
+            per inceptos himenaeos. Curabitur <a href="#">Link inside a paragraph</a> scelerisque consequat arcu, at euismod nulla lacinia a. Quisque neque ex, 
             convallis nec elit nec, facilisis pellentesque quam. Nullam mi tortor, lacinia non tincidunt eu, consectetur vitae diam.
 
 
@@ -45,15 +45,25 @@
         width="500px"
         />
 
-
         <h3>Ingredients</h3>
-        <!-- ul = unordered list -->
+        <!-- ul = unordered list, dot list-->
         <ul>
             <li>unordered item 1</li>
             <li>unordered item 2</li>
             <li>unordered item 3</li>
         </ul>
+
+        <h3>Instructions</h3>
+        <!-- ol = ordered list, numbers 1,2,3 -->
+        <ol>
+            <li>ordered item 1</li>
+            <li>ordered item 2</li>
+            <li>ordered item 3</li>
+        </ol>
         
+        <!-- target _blank means open link in a new tab -->
+        <a href="https://www.justonecookbook.com/mapo-tofu/" target="_blank">Here's the link to the original recipe.</a>
+
     </p>
     </body>
 
