made and filled out recipe.md and index.html for the recipe assignment

--- a/Week01/Week1_2-HTML/index.html
+++ b/Week01/Week1_2-HTML/index.html
@@ -3,62 +3,78 @@
     <head>
          <meta charset="UTF-8"/>
          <meta name ="viewport" content="width=device-width, initial-scale=1"/>
-         <title>HTML Elements 101</title>
+         <title>Mapo Tofu Recipe</title>
     </head> 
     <body>
-        <h1>Heading 1 is the most important text on the page. This is usually a marketing tagline/company name/page title. 
-        Only one h1 per page</h1>
-        <h2>Heading 2 -- can have as many h2-h6 as you want</h2>
-        <h3>Heading 3 -- this one is a little but smaller</h3>
-        <h4>Heading 4 -- aaaaaaaaaaa</h4>
-        <h5>Heading 5 -- having only h1-h3 is usually fine </h5>
-        <h6>Heading 6 -- lil baby heading </h6>
-        <p>This is your HTML boilerplate. Save it w/out the notes as a quick starter file for HTML docs!</p>
-
-
-        <!-- <br /> creates a break, but not a paragraph space. new line -->
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin justo quam, aliquam in lorem nec, mattis 
-            fermentum nibh. Suspendisse potenti. Aenean bibendum quam sed lorem sodales iaculis vitae at odio. Mauris 
-            malesuada consectetur enim, non commodo mi varius ac. Morbi faucibus neque quis nisi lobortis ultrices. 
-            Integer vehicula imperdiet orci vel congue. <br /> Class aptent taciti sociosqu ad litora torquent per conubia nostra, 
-            per inceptos himenaeos. Curabitur <a href="#">Link inside a paragraph</a> scelerisque consequat arcu, at euismod nulla lacinia a. Quisque neque ex, 
-            convallis nec elit nec, facilisis pellentesque quam. Nullam mi tortor, lacinia non tincidunt eu, consectetur vitae diam.
-
-
-        <em>em. this is italics. </em>
-
-        <strong>strong. this is bold.</strong>
-
-        <!-- hr for horizontal rule, creates a line -->
-        <hr />
+        <h1>Mapo Tofu Recipe</h1>
+        <h2>Taiwanese-American Homestyle Version</h2>
+        <h3>Written by Kieran Jones</h3>
+        <p>This is a style of mapo tofu that deviates from the original Sichuan version. 
+            Instead of the Sichuan peppercorn's signature <em>mala</em> spice, 
+            this version leans more into ground pork's savory potential. </p>
     
-        <h2>Recipe name</h2>
-        <p> This is a description of the recipe.</p>
-        <img 
-        src="https://placecats.com/300/200" 
-        alt="This text should describe the image content for a screen reader. This also shows up if you try to load an image w a wrong link"
-        />
-
         <img 
         src="./image/tofuPhoto.jpg" 
         alt="Bowl filled with rice, tofu, ground pork, and garnished with scallions."
         width="500px"
         />
 
-        <h3>Ingredients</h3>
+        <hr />
+
+        <h2>Ingredients</h2>
+        <p>Makes <strong>8</strong> servings.</p>
         <!-- ul = unordered list, dot list-->
+        <h3>For the Sauce</h3>
         <ul>
-            <li>unordered item 1</li>
-            <li>unordered item 2</li>
-            <li>unordered item 3</li>
+            <li>2 tbsp <em>doubanjiang</em> (spicy chili bean paste)</li>
+            <li>2 tbsp oyster sauce</li>
+            <li>2 tbsp white miso</li>
+            <li>1 tbsp soy sauce</li>
+            <li>1/4 cup mirin or shaoxing cooking wine</li>
+            <li>1/2 cup warm water </li>
+            <li>2 tsp sesame oil</li>
+            <li>2 tsp cornstarch</li>
+        </ul>
+        <h3>For the Aromatics</h3>
+        <ul>
+            <li>4 cloves garlic, minced</li>
+            <li>2 tbsp ginger, minced</li>
+            <li>4 green onions, sliced, <em>greens and whites separated</em></li>
+        </ul>
+        <h3>For the Mapo Tofu</h3>
+         <ul>
+             <li>2 tbsp neutral cooking oil</li>
+             <li>1 lb ground pork</li>
+            <li>32 oz (two blocks) tofu, soft or medium firmness</li>
         </ul>
 
-        <h3>Instructions</h3>
+        <hr />
+
+        <h2>Instructions</h2>
         <!-- ol = ordered list, numbers 1,2,3 -->
+        <h3>Setup</h3>
         <ol>
-            <li>ordered item 1</li>
-            <li>ordered item 2</li>
-            <li>ordered item 3</li>
+            <li>Combine the sauce ingredients in a medium bowl, whisk to combine. Set sauce aside.</li>
+            <li>Finely mince garlic and ginger. Slice the green onions, separating the whites and greens. 
+                Combine garlic, ginger, and green onion whites. 
+                Set the green onion greens aside for finishing and garnish.</li>
+            <li>Drain and cut the tofu into 1-inch chunks.</li>
+        </ol>
+
+        <h3>Cooking</h3>
+        <ol>
+            <li>Heat a large frying pan to medium-high heat. A
+                dd 2 tbsp neutral oil to the hot pan. 
+                Add the garlic, ginger, and green onion whites.
+            </li>
+            <li>Saute, stirring frequently, until aromatics are fragrant, 1-2 minutes.
+            </li>
+            <li>Add ground pork, stirring frequently and breaking up chunks, until pork is no longer pink.
+            </li>
+            <li>Turn the heat down to medium. Add the sauce to the pan, stirring frequently, until the sauce begins to simmer.
+            </li>
+            <li>Once the sauce has simmered, gently add the tofu. Coat the tofu with sauce, and stir occasionally until tofu is heated through.</li>
+            <li>Stir in green onion greens, then remove mapo tofu from the heat. Serve over white rice.</li>
         </ol>
         
         <!-- target _blank means open link in a new tab -->
