--- a/Week03/W3Homework/index.html
+++ b/Week03/W3Homework/index.html
@@ -206,7 +206,7 @@
 
     <!-- cookbook site name -->
  <section>
-         <p class="website_label">Cooking Corner</p>
+         <p class="website_label">Kieran's Cooking Corner</p>
     </section>
        
     <!-- nav bar -->
