--- a/Week04/class_pull_Week4_1/Gallery/Gallery_Starter_Files/index.html
+++ b/Week04/class_pull_Week4_1/Gallery/Gallery_Starter_Files/index.html
@@ -3,8 +3,17 @@
 
 <head>
     <title>New York City Gallery</title>
+
     <!-- Link to CSS File here -->
+     <link rel="stylesheet" href="./css/style.css"/>
+
     <!-- Link to Google Font Here -->
+    <!-- kaushan script -->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">"/> -->
+
+
 </head>
 
 <body>
