--- a/Week04/class_pull/class_pull_Week4_2/Media_Queries/In_Class_Exercise/C/index.html
+++ b/Week04/class_pull/class_pull_Week4_2/Media_Queries/In_Class_Exercise/C/index.html
@@ -21,6 +21,13 @@
         </ul>
       </nav>
     </header>
+
+
+    <div id="box_sizing_example">
+
+    </div>
+
+
     <main class="container">
       <div class="thumb"><img src="./img/pepesilvia.jpg" /></div>
       <div class="thumb"><img src="./img/pepesilvia.jpg" /></div>
@@ -32,5 +39,9 @@
       <div class="thumb"><img src="./img/pepesilvia.jpg" /></div>
       <div class="thumb"><img src="./img/pepesilvia.jpg" /></div>
     </main>
+
+
+
+
   </body>
 </html>
