--- a/Week04/class_pull/class_pull_Week4_2/Media_Queries/In_Class_Exercise/C/index.html
+++ b/Week04/class_pull/class_pull_Week4_2/Media_Queries/In_Class_Exercise/C/index.html
@@ -23,9 +23,8 @@
     </header>
 
 
-    <div id="box_sizing_example">
-
-    </div>
+    <!-- <div id="box_sizing_example">
+    </div> -->
 
 
     <main class="container">
